--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/styles.css">
 </head>
 <body>
+    <h1>My Todo List</h1>
     <div id="todo-table">
         <form action="#">
             <input type="text" name="item" placeholder="Add new item..." required>
