--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo List</title>
+    <script src="../public/assets/todo-list.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/assets/styles.css">
 </head>
@@ -16,9 +17,9 @@
             <button type="submit">Add Item</button>
         </form>
         <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
+            <% for(var i = 0; i < todos.length; i++){ %>
+                <li><%= todos[i].item %></li>
+            <% } %>
         </ul>
     </div>    
 </body>
